tests/ui/traits/ice-with-dyn-pointee-errors.stderr
error[E0038]: the trait `Pointee` is not dyn compatible
  --> $DIR/ice-with-dyn-pointee-errors.rs:8:23
   |
LL | fn raw_pointer_in(x: &dyn Pointee<Metadata = ()>) {
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pointee` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/ptr/metadata.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error[E0271]: type mismatch resolving `<dyn Pointee<Metadata = ()> as Pointee>::Metadata == ()`
  --> $DIR/ice-with-dyn-pointee-errors.rs:10:33
   |
LL |     unknown_sized_object_ptr_in(x)
   |     --------------------------- ^ expected `()`, found `DynMetadata<dyn Pointee<Metadata = ()>>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected unit type `()`
                 found struct `DynMetadata<dyn Pointee<Metadata = ()>>`
note: required by a bound in `unknown_sized_object_ptr_in`
  --> $DIR/ice-with-dyn-pointee-errors.rs:6:50
   |
LL | fn unknown_sized_object_ptr_in(_: &(impl Pointee<Metadata = ()> + ?Sized)) {}
   |                                                  ^^^^^^^^^^^^^ required by this bound in `unknown_sized_object_ptr_in`

error[E0038]: the trait `Pointee` is not dyn compatible
  --> $DIR/ice-with-dyn-pointee-errors.rs:10:5
   |
LL |     unknown_sized_object_ptr_in(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pointee` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/ptr/metadata.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error[E0038]: the trait `Pointee` is not dyn compatible
  --> $DIR/ice-with-dyn-pointee-errors.rs:16:20
   |
LL |     raw_pointer_in(&42)
   |                    ^^^ `Pointee` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/ptr/metadata.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0038, E0271.
For more information about an error, try `rustc --explain E0038`.
